@@ -20,8 +20,10 @@
 #ifndef _RECORD_H_
 #define _RECORD_H_
 
-#define RECORD_IS_USED				(current_target.beneath == &record_ops)
-#define RECORD_IS_REPLAY			(record_list->next || record_execdir == EXEC_REVERSE)
+#define RECORD_IS_USED   \
+     (current_target.beneath == &record_ops)
+#define RECORD_IS_REPLAY \
+     (record_list->next || record_exec_direction == EXEC_REVERSE)
 #define RECORD_TARGET_SUPPORT_RECORD_WAIT	(record_ops.beneath->to_support_record_wait)
 
 typedef struct record_reg_s
@@ -76,7 +78,7 @@ extern struct regcache *record_regcache;
 extern struct target_ops record_ops;
 extern int record_resume_step;
 extern int record_regcache_raw_write_regnum;
-extern enum exec_direction_kind record_execdir;
+extern enum exec_direction_kind record_exec_direction;
 
 extern int record_arch_list_add_reg (int num);
 extern int record_arch_list_add_mem (CORE_ADDR addr, int len);
