@@ -1,4 +1,11 @@
-2008-10-02  Michael Snyder  <msnyder@vmware.com>
+2008-10-04  Michael Snyder  <msnyder@vmware.com>
+
+	* target.c, target.h: Rename execdir to exec_direction.
+	* record.c, record.h: Ditto.
+	* reverse.c: Ditto.
+	* remote.c: Ditto.
+
+	* reverse.c (show_exec_direction_func): Don't error, just inform.
 
 	* reverse.c (reverse-continue): Remove a comma from docs string,
 	to avoid confusing output from 'apropos'.
